# cellwatch

./: .gitignore  README.md  pyproject.toml  queue_depth_after_tuning.csv  queue_depth_before_tuning.csv
.github/workflows/: deploy-pages.yml
docs/: OVERVIEW.md  RUNBOOK.md
frontend/: README.md  app.js  index.html  style.css
frontend/evidence/: alerts.json  cells.json  health.json  kpis.json  meta.json
frontend/scripts/: build_evidence.py
generator/: cells.py  simulate.py
infra/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/control-plane/: alerter.tf  api_gateway.tf  lambda.tf  outputs.tf  rds.tf  security_groups.tf  variables.tf
infra/modules/data-plane/: api_gateway.tf  dynamodb.tf  lambda.tf  outputs.tf  s3.tf  sns.tf  sqs.tf  variables.tf
infra/modules/kms/: main.tf  variables.tf
infra/modules/monitoring/: alarms.tf  dashboard.tf  variables.tf
infra/policies/: README.md  alerter-lambda-policy.json  ingest-lambda-policy.json  migrate-lambda-policy.json  processor-lambda-policy.json  query-lambda-policy.json
infra/scripts/: build_lambda_artifacts.sh  set-lab-creds.sh
loadtest/: README.md  RESULTS.md  ingest.js  poll_ingest_queue_depth.sh  query.js
services/alerter/: handler.py
services/common/: config.py  db.py  detection.py  logging.py  schema.sql  storage.py
services/ingest/: handler.py
services/migrate/: handler.py
services/processor/: handler.py
services/query/: handler.py
tests/: conftest.py  test_alerter.py  test_detection.py  test_ingest.py  test_migrate.py  test_processor.py  test_query.py
(+6 files in other folders)
