[project]
name = "cellwatch"
version = "0.1.0"
description = "CellWatch RAN observability & anomaly detection platform"
requires-python = "==3.12.*"
dependencies = [
    "aws-lambda-powertools>=3.0.0",
    "aws-xray-sdk>=2.14",
    "pydantic>=2.7",
    "boto3>=1.34",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[dynamodb,s3,sqs]>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["services", "generator"]
